# glslangCompilerTest

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
shaders/: post.vert  test.frag
srcs/: compiler.cpp  compiler.hpp  main.cpp
